# sandbox-runtime-py

./: .gitignore  .mcp.json  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  RESUMABILITY.md  pyproject.toml
.claude/commands/: setup-sandbox-mcp.md
examples/: test-srt-settings.json
sandbox_runtime/: __init__.py  cli.py  config.py  http_proxy.py  linux_sandbox.py  macos_sandbox.py  manager.py  runner.py  sandbox_utils.py  schemas.py  seccomp.py  socks_proxy.py  violation_store.py
sandbox_runtime/server/: README.md  SANDBOX_CONFIG.md  __init__.py  config.py  execution_manager.py  mcp_server.py  redis_event_store.py  redis_state.py
sandbox_runtime/utils/: __init__.py  debug.py  platform.py  ripgrep.py
tests/: TEST_RESUMABILITY_SUMMARY.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_config_aliases.py  test_http_proxy.py  test_incremental_streaming.py  test_macos_sandbox.py  test_manager.py  test_mcp_sdk_client.py  test_mcp_server.py  test_resource_limits.py  test_resumability.py  test_runner.py  test_sandbox_integration.py  test_sandbox_utils.py  test_socks_proxy.py  test_violation_store.py
